--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</tbody>
 		</table>
 		
-		<p>PS: We will available the metadata about manual validation of complete composites and side effects as soon as possible.</p>
+		<p>PS: We will available the metadata about the manual validation of complete composites and side effects as soon as possible.</p>
 
 		<h3 class="page-header" id="authors">Authors</h3>
 
