--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					 <tr>
 					 <td>1.</td>
 					 <td><a href="https://docs.google.com/spreadsheets/d/1WS9vwI67DaSd9SYr0fUNXtmZx3nE0CZ0C2g5YLd2dQk/edit?usp=sharing">Information of Software Projects</a></td>
-					 <td>General information about the software projects that were investigated in this study.</td>
+					 <td>General information about the software projects that were investigated in this study. The upload of these files is finished.</td>
 					 </tr>
 					 
 					 
