--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					<tr>
 					 <td>10.</td>
 					 <td><a href="https://drive.google.com/drive/folders/17C7eFVnTQAsjEFGhCjCoscauKo6MbhvF?usp=sharing">Manual Validation of (Side) Effects of Complete Composites</a></td>
-					 <td> Artifacts with comments and procedures of the manual validation of side effects of complete composites. The upload of these files is not finished. When the upload to finish, we will warn here. Thank you for your comprehension.</td>
+					 <td> Artifacts with comments and procedures of the manual validation of side effects of complete composites. The upload of these files is finished.</td>
 					 </tr>
 					  
 							
@@ -152,8 +152,6 @@
 			</tbody>
 		</table>
 		
-		<p>PS: We will available the metadata about the manual validation of complete composites and side effects as soon as possible.</p>
-
 		<h3 class="page-header" id="authors">Authors</h3>
 
 		<p>Any questions and/or suggestions should be sent to the paper
