--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
 					<th>#</th>
 					<th>Name</th>
 					<th>E-mail</th>
+					<th>1.</th>
+					<th>Ana Carla Bibiano</th>
+					<th>abibiano@inf.puc-rio.br</th>
 				</tr>
 			</thead>
 
