--- a/index.html
+++ b/index.html
@@ -159,11 +159,70 @@
 					<th>E-mail</th>
 				</tr>
 				<tr>
-					<th>1</th>
+					<th>1.</th>
 					<th>Ana Carla Bibiano</th>
 					<th>abibiano@inf.puc-rio.br</th>
 				</tr>
-				
+				<tr>
+					<th>2.</th>
+					<th>Wesley K. G. Assunção</th>
+					<th>wesleyklewerton@gmail.com</th>
+				</tr>
+				<tr>
+					<th>3.</th>
+					<th>Daniel Coutinho</th>
+					<th>dcoutinho@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>4.</th>
+					<th>Kleber Tarcisio</th>
+					<th>klebersantos@ufcg.edu.br</th>
+				</tr>
+				<tr>
+					<th>5.</th>
+					<th>Vinícius Soares</th>
+					<th>vsoares@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>6.</th>
+					<th>Rohit Gheyi</th>
+					<th>rohit@dsc.ufcg.edu.br</th>
+				</tr>
+				<tr>
+					<th>7.</th>
+					<th>Alessandro Garcia</th>
+					<th>afgarcia@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>8.</th>
+					<th>Baldoino Fonseca</th>
+					<th>baldoino@ic.ufal.br</th>
+				</tr>
+				<tr>
+					<th>9.</th>
+					<th>Márcio Ribeiro</th>
+					<th>marcio@ic.ufal.br</th>
+				</tr>
+				<tr>
+					<th>10.</th>
+					<th>Daniel Oliveira</th>
+					<th>doliveira@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>11.</th>
+					<th>Caio Barbosa</th>
+					<th>csilva@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>12.</th>
+					<th>João Lucas Marques</th>
+					<th>jcorreia@inf.puc-rio.br</th>
+				</tr>
+				<tr>
+					<th>13.</th>
+					<th>Anderson Oliveira</th>
+					<th>aoliveira@inf.puc-rio.br</th>
+				</tr>
 			</thead>
 
 			
