Fixing author names

--- a/index.html
+++ b/index.html
@@ -175,59 +175,59 @@
 					<td>wesleyklewerton@gmail.com</td>
 				</tr>
 				<tr>
-					<th>3.</th>
-					<th>Daniel Coutinho</th>
-					<th>dcoutinho@inf.puc-rio.br</th>
+					<td>3.</td>
+					<td>Daniel Coutinho</td>
+					<td>dcoutinho@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>4.</th>
-					<th>Kleber Tarcisio</th>
-					<th>klebersantos@ufcg.edu.br</th>
+					<td>4.</td>
+					<td>Kleber Tarcisio</td>
+					<td>klebersantos@ufcg.edu.br</td>
 				</tr>
 				<tr>
-					<th>5.</th>
-					<th>Vinícius Soares</th>
-					<th>vsoares@inf.puc-rio.br</th>
+					<td>5.</td>
+					<td>Vinícius Soares</td>
+					<td>vsoares@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>6.</th>
-					<th>Rohit Gheyi</th>
-					<th>rohit@dsc.ufcg.edu.br</th>
+					<td>6.</td>
+					<td>Rohit Gheyi</td>
+					<td>rohit@dsc.ufcg.edu.br</td>
 				</tr>
 				<tr>
-					<th>7.</th>
-					<th>Alessandro Garcia</th>
-					<th>afgarcia@inf.puc-rio.br</th>
+					<td>7.</td>
+					<td>Alessandro Garcia</td>
+					<td>afgarcia@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>8.</th>
-					<th>Baldoino Fonseca</th>
-					<th>baldoino@ic.ufal.br</th>
+					<td>8.</td>
+					<td>Baldoino Fonseca</td>
+					<td>baldoino@ic.ufal.br</td>
 				</tr>
 				<tr>
-					<th>9.</th>
-					<th>Márcio Ribeiro</th>
-					<th>marcio@ic.ufal.br</th>
+					<td>9.</td>
+					<td>Márcio Ribeiro</td>
+					<td>marcio@ic.ufal.br</td>
 				</tr>
 				<tr>
-					<th>10.</th>
-					<th>Daniel Oliveira</th>
-					<th>doliveira@inf.puc-rio.br</th>
+					<td>10.</td>
+					<td>Daniel Oliveira</td>
+					<td>doliveira@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>11.</th>
-					<th>Caio Barbosa</th>
-					<th>csilva@inf.puc-rio.br</th>
+					<td>11.</td>
+					<td>Caio Barbosa</td>
+					<td>csilva@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>12.</th>
-					<th>João Lucas Marques</th>
-					<th>jcorreia@inf.puc-rio.br</th>
+					<td>12.</td>
+					<td>João Lucas Marques</td>
+					<td>jcorreia@inf.puc-rio.br</td>
 				</tr>
 				<tr>
-					<th>13.</th>
-					<th>Anderson Oliveira</th>
-					<th>aoliveira@inf.puc-rio.br</th>
+					<td>13.</td>
+					<td>Anderson Oliveira</td>
+					<td>aoliveira@inf.puc-rio.br</td>
 				</tr>
 			</thead>
 
